Stop times toggle from jumping when no e1rm is present

--- a/client/src/components/Workout.scss
+++ b/client/src/components/Workout.scss
@@ -28,6 +28,7 @@
 
 #times-toggle {
   grid-column-start: 1;
+  grid-row-start: 4;
   align-self: end;
   justify-self: start;
   margin: 0 0 1em 1em;
